fixed layout bugs for ipad

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1407,6 +1407,15 @@ textarea {
 
     @media only screen and (max-width: 800px) and (min-width: 601px) {
 
+        .burger-button {
+            position: absolute;
+            right: 0.5vw;
+            top: 0;
+            font-size: 5vw;
+            border: none;
+            background-color: none;
+        }
+
         .staff-profile-skew-right-mobile .staff-title-ipad {
             display: inline-block;
             position: absolute;
@@ -1622,10 +1631,14 @@ textarea {
     
 @media only screen and (max-width: 1100px) and (min-width: 800px) {
 
+    .newsletter-top {
+        margin-top: 10vh ;
+    }
+
     .burger-button {
         position: absolute;
-        right: 5vw;
-        top: 0;
+        right: 1vw;
+        top: 1vw;
         font-size: 5vw;
     }
 
